Fix breadcrumb spacing

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -1176,6 +1176,10 @@ $mobile-menu-item-button-height: 7rem;
     padding-top: $header-height-mobile;
   }
 
+  .breadcrumb {
+    padding-top: 1rem;
+  }
+
   body.page-node-type-landing-page & {
     padding-top: $header-height;
   }
